--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "my-expo-app",
   "version": "1.0.0",
+  "main": "expo-router/entry",
+
   "scripts": {
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -17,7 +19,12 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "expo-router": "~4.0.19",
+    "react-native-screens": "~4.4.0",
+    "expo-linking": "~7.0.5",
+    "expo-constants": "~17.0.8",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +42,5 @@
     "extends": "universe/native",
     "root": true
   },
-  "main": "node_modules/expo/AppEntry.js",
   "private": true
 }
